--- a/STM32Project/LAB3/LAB3.ioc
+++ b/STM32Project/LAB3/LAB3.ioc
@@ -8,7 +8,9 @@ Mcu.CPN=STM32F103C6U6A
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=SYS
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PB0
@@ -26,6 +28,9 @@ Mcu.Pin19=PB7
 Mcu.Pin2=PB2
 Mcu.Pin20=PB8
 Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_ND
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PB10
 Mcu.Pin4=PB11
 Mcu.Pin5=PB12
@@ -33,7 +38,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PA8
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=22
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -49,6 +54,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=LED7SEG_C
@@ -170,7 +176,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -178,5 +184,14 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=9
+TIM2.Prescaler=7999
+VP_SYS_VS_ND.Mode=No_Debug
+VP_SYS_VS_ND.Signal=SYS_VS_ND
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
