--- a/STM32Project/LAB3/LAB3.ioc
+++ b/STM32Project/LAB3/LAB3.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C6U6A
 Mcu.Family=STM32F1
@@ -129,7 +130,7 @@ PB5.GPIO_Label=LED7SEG_1
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LEDG7SEG_2
+PB6.GPIO_Label=LED7SEG_2
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
